# YUNO-OS-0.5B

./: .gitignore  MODEL_CARD.md  README.md  RELEASE_NOTES.md  pyproject.toml  requirements.txt  setup.py  yuno.spec
YUNO_OS_Release_Package/: README.md  app.py  cli.py  extract_and_run.py  pack_yuno_bin.py  run_cli.bat  run_web_ui.bat  split_container.py  test_load.py
config/: training_config.yaml  yuno_config.yaml
datasets/: eval.jsonl  long_term_memory.json  project_memory.json  train.jsonl
docs/architecture/: Architecture.md  YUNO_OS_Architecture.md  yuno_v0.5.0_final_report.md
docs/theory/: 01_tokens_and_vocabulary.md  02_embeddings.md  03_transformer_overview.md  04_self_attention.md  05_multi_head_attention.md  06_feed_forward_networks.md  07_residual_connections_and_normalization.md  08_positional_encoding_and_rope.md  09_kv_cache.md  10_decoder_only_architecture.md  11_autoregressive_generation.md
evaluation/: metrics_tracker.py  run_evals.py
experiments/sft_20260721_124312/: metadata.json
inference/: generate.py
models/yuno-hybrid-0.5.0/: README.md  config.json  tokenizer_config.json
scripts/: build_dataset_files.py  convert_single_file_model.py  demo_os_cli.py  download_model.py  export_hybrid_model.py  generate_dataset.py  verify_model.py
src/yuno_llm/: __init__.py  automation.py  cli.py  config.py  generation.py  identity.py  memory.py  model.py  planner.py  tokenizer.py  (+4 more)
tests/: test_config.py  test_e2e_full_os.py  test_memory.py  test_model.py  test_tools.py  test_updater.py
training/: dataset_prep.py  lora_config.py  train_sft.py
