[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yuno-llm"
version = "0.5.0"
description = "YUNO-LLM: Personal AI Operating System — Natural, Private, Offline-first"
readme = "README.md"
authors = [
    { name = "YUNO-LLM Team" }
]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "pyyaml>=6.0",
    "pillow>=9.0.0",
    "pytesseract>=0.3.10",
    "pyttsx3>=2.90",
    "speechrecognition>=3.10.0",
    "pymupdf>=1.22.0",
    "numpy>=1.24.0",
]

[project.scripts]
yuno = "yuno_llm.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
